--- a/style.css
+++ b/style.css
@@ -1,4 +1,69 @@
 body {
     font-family: "Arial Black";
     background-color: lightgray;
+    position: relative;
+}
+
+/*general classes*/
+.z10 {
+    z-index: 10;
+}
+
+.zminus10 {
+    z-index: -10;
+}
+
+.d-none {
+    display: none;
+}
+
+
+/*try again button*/
+.btn-tryagain {
+    cursor: pointer;
+    position: absolute;
+    border: 5px solid black;
+    border-radius: 20px;
+    left: 150px;
+    top: 350px;
+    width: 400px;
+    height: 120px;
+    background-color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.btn-tryagain p {
+    font-size: 30px;
+}
+
+.btn-tryagain a {
+    color: black;
+    text-decoration: none;
+}
+
+/*start new game button*/
+.btn-start {
+    cursor: pointer;
+    position: absolute;
+    border: 5px solid black;
+    border-radius: 20px;
+    left: 100px;
+    top: 350px;
+    width: 500px;
+    height: 120px;
+    background-color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.btn-start p {
+    font-size: 40px;
+}
+
+.btn-start a {
+    color: black;
+    text-decoration: none;
 }
