--- a/style.css
+++ b/style.css
@@ -1,10 +1,11 @@
 body {
     font-family: "Arial Black";
-    background-color: lightgray;
+    background-color: rgb(243, 229, 182);
     position: relative;
 }
 
 /*general classes*/
+
 .z10 {
     z-index: 10;
 }
@@ -22,8 +23,15 @@ body {
     margin-left: 240px;
 }
 
+/*canvas*/
+
+.canvas-style {
+    border: 3px solid black;
+    border-radius: 5px;
+}
 
 /*try again button*/
+
 .btn-tryagain {
     cursor: pointer;
     position: absolute;
@@ -48,14 +56,23 @@ body {
     text-decoration: none;
 }
 
+
+.buttoncotainer {
+    margin-top: 80px;
+    width:720px;
+    height:450px;
+   position: fixed;
+   display: flex;
+   flex-direction: column;
+   align-items: center;
+}
 /*start new game button*/
+
 .btn-start {
     cursor: pointer;
-    position: absolute;
     border: 5px solid black;
     border-radius: 20px;
-    left: 100px;
-    top: 350px;
+    margin-top: 220px;
     width: 500px;
     height: 120px;
     background-color: white;
@@ -71,4 +88,60 @@ body {
 .btn-start a {
     color: black;
     text-decoration: none;
+}
+
+/*help button*/
+
+.btn-help {
+    cursor: pointer;
+    border: 5px solid black;
+    border-radius: 20px;
+    margin-top: 10px;
+    width: 400px;
+    height: 65px;
+    background-color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.btn-help p {
+    font-size: 20px;
+}
+
+.btn-help a {
+    color: black;
+    text-decoration: none;
+}
+
+/*bottom style*/
+
+.controls-container {
+    padding-top: 20px;
+    padding-bottom: 15px;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    width: 710px;
+    height: 150px;
+    margin-top: 10px;
+    margin-left: 4px;
+    background-color: lightgrey;
+    border: 3px solid black;
+    border-radius: 5px;
+}
+
+.controls-container img {
+    height: 120px;
+    width: 120px;
+    border-radius: 50%;
+    background-color: white;
+    margin-bottom: 5px;
+}
+
+.controls-row-element {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
